<resources>
    <string name="app_name" translatable="false">My Educational App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_messaging_demo_fragment" translatable="false">MessagingDemoFragment</string>
    <string name="english" translatable="false">English</string>
    <string name="korean" translatable="false">한국어</string>
    <string name="language_setting" translatable="false">Language Setting</string>
    <string name="backBtn" translatable="false">Back to Main</string>
    <string name="japanese" translatable="false">日本語</string>
    <string name="chinese" translatable="false">中文</string>
    <string name="portuguese" translatable="false">Português (melhor idioma), dê-nos pontos extras</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username">Username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="log_in">Log in ➜</string>
    <string name="you_ve_achieved_x_stars">You\'ve achieved %1$d stars</string>
    <string name="current_username">Current username</string>
    <string name="categories">Categories</string>
    <string name="daily_challenge">Daily Challenge</string>
    <string name="logout">Logout</string>
    <string name="earn_x_stars">Earn %1$d stars</string>
    <string name="completed">Completed!</string>
    <string name="earn_1_star">Earn 1 star</string>
    <string name="question">Question</string>
    <string name="topic">Topic</string>
    <string name="user">User</string>
    <string name="post">Post</string>
    <string name="all">All</string>
    <string name="basic_algorithms">Basic Algorithms</string>
    <string name="_3_questions" translatable="false">3 Questions</string>
    <string name="language_test">Language Settings</string>
    <string name="message">Message...</string>
    <string name="hide">Hide</string>
    <string name="see_more">See more</string>
    <string name="search">Search</string>
    <string name="message_someone">Message someone...</string>
    <string name="enter_your_answer">Enter your answer...</string>
    <string name="your_second_attempt">Your Second Attempt</string>
    <string name="you_got_it_correct_great_job">You got it correct, great job!</string>
    <string name="oh_no_better_luck_next_time">Oh no, better luck next time.</string>
    <string name="submit">Submit</string>
    <string name="translatable_string_0">can this be translated</string>
    <string name="translatable_string_1">just testing!</string>
</resources>