<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/login_background">


    <!-- Username Widget -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/username_text_container"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_details_containers"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username_label_text"
        android:paddingVertical="20dp">

        <!-- Username entry field -->
        <EditText
            android:id="@+id/username_input_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/ibm_plex_sans_medium"
            android:hint="@string/enter_your_username"
            android:inputType="textAutoComplete|text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/username_incorrect_icon"
            app:layout_constraintStart_toStartOf="@+id/username_start_guide"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/username_incorrect_icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/icon_cross_circle"
            android:clipToOutline="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/username_end_guide"
            app:layout_constraintStart_toStartOf="@+id/username_end_guide"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/username_start_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/username_end_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/Username_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/username_text_container"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Password Widget -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_text_container"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_details_containers"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_label_text"
        android:paddingVertical="20dp">

        <!-- Password entry field -->
        <EditText
            android:id="@+id/password_input_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/ibm_plex_sans_medium"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:lines="1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/password_incorrect_icon"
            app:layout_constraintStart_toStartOf="@+id/password_start_guide"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/password_incorrect_icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/icon_cross_circle"
            android:clipToOutline="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/password_end_guide"
            app:layout_constraintStart_toStartOf="@+id/password_end_guide"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/password_start_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09142857" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/password_end_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/password_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/password_text_container"
        app:layout_constraintTop_toBottomOf="@+id/username_text_container" />

    <!-- Login button widget -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/submit_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:background="@drawable/login_submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text_container"
        android:paddingVertical="20dp">


        <TextView
            android:id="@+id/submit_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_medium"
            android:text="@string/log_in"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>